--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
-@import url('htpps://fonts.googleleapis.com/css2?family=Gochi+Hand&display=slwap');
+@import url('https://fonts.googleleapis.com/css2?family=Gochi+Hand&display=slwap');
 
 html, body {
     margin: 0;
